# 2dphysics

./: .clang-format  .gitignore  CMakeLists.txt  build.sh  compile.sh  compile_commands.json  run.sh
notes/: angular_motion.md  collision_system.md  forces.md  math.md  newton.md  particles.md  rigidbodies.md  torque.md
src/: Application.cpp  Application.h  Graphics.cpp  Graphics.h  main.cpp
src/Physics/: Body.cpp  Body.h  CollisionDetection.cpp  CollisionDetection.h  Constants.h  Contact.cpp  Contact.h  Force.cpp  Force.h  Particle.cpp  Particle.h  Shape.cpp  Shape.h  Vec2.cpp  Vec2.h
